Fix chat input is hidden on Safari - 6

--- a/client/src/main.css
+++ b/client/src/main.css
@@ -19,6 +19,7 @@ html, body {
 .container {
     @apply flex w-full overflow-hidden border max-w-[100vw];
     height: 100vh;
+    min-height: 100vh;
     height: -webkit-fill-available;
 }
 
